# duckdb-hdfs

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml
hdfs-bridge/: Cargo.toml  build.rs  cbindgen.toml
hdfs-bridge/benches/: list_partitions.rs
hdfs-bridge/include/: hdfs_bridge.h
hdfs-bridge/src/: client.rs  glob.rs  lib.rs
src/: hdfs_extension.cpp  hdfs_filesystem.cpp  hdfs_functions.cpp
src/include/: hdfs_bridge.h  hdfs_filesystem.hpp  hdfs_functions.hpp
test/: README.md
test/docker/: Dockerfile  core-site.xml  docker-compose.yml  entrypoint.sh  hdfs-site.xml
test/hdfs-conf/: core-site.xml  hdfs-site.xml
test/scripts/: hdfs_down.sh  hdfs_up.sh  run_hdfs_tests.sh
test/sql/: hdfs.test  hdfs_permissions.test
