[package]
name = "hdfs-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
hdfs-native = { git = "https://github.com/casperhart/hdfs-native", branch = "kms", features = ["kms-rustls-tls"] }
libc = "0.2"
# The bridge drives hdfs-native's async client directly (the sync wrapper hides
# its runtime, which the parallel recursive listing needs). These are all
# already in hdfs-native's dependency tree.
bytes = "1"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
