[package]
name = "hdfs-bridge"
version = "0.1.0"
edition = "2021"

[lib]
# rlib in addition to staticlib so benches can link the crate.
crate-type = ["staticlib", "rlib"]

[dependencies]
hdfs-native = { git = "https://github.com/Kimahriman/hdfs-native", features = ["kms-rustls-tls"] }
libc = "0.2"
# The bridge drives hdfs-native's async client directly (the sync wrapper hides
# its runtime, which the parallel recursive listing needs). These are all
# already in hdfs-native's dependency tree.
bytes = "1"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

[dev-dependencies]
# The latency-proxy benchmark needs socket + timer support on top of the
# features the library itself uses.
tokio = { version = "1", features = ["rt-multi-thread", "sync", "net", "io-util", "time", "macros"] }

[[bench]]
name = "list_partitions"
harness = false

[build-dependencies]
cbindgen = "0.29.4"
